src/routes/Home/components/Entrepreneurship/Entrepreneurship.module.css
.container {
}

.fLetterStroke1,
.fLetterStroke2,
.fLetterStroke3,
.flameStroke {
    fill: none;
    stroke: #32ff95;
    stroke-miterlimit: 10;
    stroke-linecap: round;
    stroke-width: 15;
    animation-name: write;
    animation-timing-function: ease-in-out;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
}

.fLetterStroke1 {
    stroke-dasharray: 921.2439575195312;
    stroke-dashoffset: 921.2439575195312;
    animation-duration: 0.3s;
}

.fLetterStroke2 {
    stroke-dasharray: 601.0946655273438;
    stroke-dashoffset: 601.0946655273438;
    animation-delay: 0.4s;
    animation-duration: 0.3s;
}

.fLetterStroke3 {
    stroke-dasharray: 235.07330322265625;
    stroke-dashoffset: 235.07330322265625;
    animation-duration: 0.2s;
    animation-delay: 0.8s;
}

.flameStroke {
    stroke-dasharray: 4588.9248046875;
    stroke-dashoffset: 4588.9248046875;
    animation-duration: 2s;
    animation-delay: 1.1s;
}

@keyframes write {
    to {
        stroke-dashoffset: 0;
    }
}

@keyframes introFadeIn {
    from {
        opacity: 0;
        transform: translateY(-10px);
    }

    to {
        opacity: 1;
        transform: translateY(0);
    }
}

